[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/mat_maker_gd/widgets/float_edit/float_edit.gd" type="Script" id=1]

[node name="FloatEdit" type="LineEdit"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1280.0
margin_right = -1222.0
margin_bottom = -696.0
focus_mode = 1
text = "0.5"
max_length = 100
context_menu_enabled = false
caret_blink = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -3.0
margin_right = -2.0
margin_bottom = -3.0
rect_min_size = Vector2( 0, 2 )
mouse_filter = 2
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="Cursor" type="ColorRect" parent="Slider"]
margin_right = 3.0
margin_bottom = 1.0
rect_min_size = Vector2( 3, 2 )
mouse_filter = 2

[connection signal="focus_entered" from="." to="." method="_on_FloatEdit_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LineEdit_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_LineEdit_gui_input"]
[connection signal="resized" from="." to="." method="do_update"]
[connection signal="text_changed" from="." to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="." to="." method="_on_LineEdit_text_entered"]
[connection signal="resized" from="Slider" to="." method="do_update"]
